# IntervalsGenerator

./: .gitignore  CROSS_PLATFORM.md  LICENSE  MANIFEST.in  README.md  app.py  build_macos.sh  build_windows.bat  column_config.yaml  main.py  merge_csv.py  pyproject.toml  quick_merge.py  requirements.txt  windows_launcher.py
1_TrainRed_files/: session_20260119_105731_avg_clean.csv
1_TrainRed_files/TrainRed_files_old/: TrainRed_session_20251231_104129_avg_clean.csv  TrainRed_session_20251231_123115_avg.csv  TrainRed_session_20251231_123115_avg_clean.csv  session_20260101_120222_avg.csv  session_20260101_120222_avg_clean.csv  session_20260102_140038.csv  session_20260102_140038_avg.csv  session_20260102_140038_avg_clean.csv  session_20260103_121419.csv  session_20260103_121419_avg.csv  session_20260103_121419_avg_clean.csv  session_20260103_131201.csv  session_20260103_131201_avg.csv  session_20260103_131201_avg_clean.csv  session_20260105_120108.csv  session_20260105_120108_avg.csv  session_20260105_120108_avg_clean.csv  (+10 more)
2_Tymewear_files/: endurance____variable_2026-01-19_clean.csv
3_Wahoo_files/: Wahoo.csv
4_Garmin_files/: i119022550_streams_clean.csv
5_Treningi_Old/: Trening-01.01.2026-import.csv  Trening-03.01.2026-import.csv  Trening-05.01.2026-import.csv  Trening-06.01.2026-import.csv  Trening-07.01.2026-import.csv  Trening-08.01.2026-import.csv  Trening-10.01.2026-import.csv  Trening-12.01.2026-import.csv  Trening-16.01.2026-import.csv
benchmarks/: benchmark.py
docs/: API.md  PERFORMANCE.md
intervals/: __init__.py  backup.py  cli.py  config.py  exceptions.py  filesystem.py  interfaces.py  interpolation.py  logging_config.py  merger.py  pipeline.py  report.py  types.py  ui.py  utils.py  watcher.py
reports/: report_20251231_113157.html  report_20251231_113358.html  report_20251231_114419.html  report_20251231_114950.html  report_20251231_115412.html  report_20251231_115936.html  report_20251231_121212.html  report_20251231_152106.html  report_20260101_150235.html  report_20260102_153825.html  report_20260103_152929.html  report_20260103_153614.html  report_20260105_141205.html  report_20260106_151142.html  report_20260107_141829.html  report_20260108_135301.html  report_20260110_140853.html  report_20260110_141211.html  report_20260112_134343.html  report_20260116_094206.html  report_20260119_135328.html  report_20260121_143849.html  report_20260124_143841.html  report_20260125_141804.html
tests/: conftest.py  test_edge_cases.py  test_filesystem.py  test_loaders_detection.py  test_merge_edge_cases.py  test_merger.py  test_pipeline.py  test_quick_merge.py  test_validation.py  test_validators.py
(+70 files in other folders)
